# nano-plaid

./: .gitignore  LICENSE  README.md  encode.py  eval.py  make_toy.py  nanoplaid.py  pyproject.toml
.github/workflows/: ci.yml
bench/: README.md  compare_gemm.py  compare_mixedbread.py
data/toy/fiqa/: corpus_ids.json  corpus_lens.npy  qrels.json  queries.npy  query_ids.json  query_lens.npy
data/toy/nfcorpus/: corpus_ids.json  corpus_lens.npy  qrels.json  queries.npy  query_ids.json  query_lens.npy
data/toy/quora/: corpus_ids.json  corpus_lens.npy  qrels.json  queries.npy  query_ids.json  query_lens.npy
data/toy/scifact/: corpus_ids.json  corpus_lens.npy  qrels.json  queries.npy  query_ids.json  query_lens.npy
docs/: class2.html  class3.html  class4.html  course.css  glossary.js  index.html
kernels/: Cargo.toml  README.md  test_bridge.py
kernels/examples/: bench.rs  ladder.rs
kernels/src/: lib.rs  python.rs
