# Builds the optional Rust kernel extension for `eval.py --backend rust`:
#     maturin develop -m kernels/Cargo.toml --release --features python
# nanoplaid.py / eval.py --backend numpy need none of this — numpy only.
[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "nanoplaid-kernels"
version = "0.1.0"
description = "Rust SIMD kernels for nano-plaid binary MaxSim"
requires-python = ">=3.9"
dependencies = ["numpy"]

[tool.maturin]
manifest-path = "kernels/Cargo.toml"
features = ["python"]
module-name = "nanoplaid_kernels"
